Add entity select with drop down. More samples. Bugfixes.